--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=app
+#For Database Mapping
+spring.datasource.url=jdbc:mysql://database-2.c9ua8ykga92s.eu-north-1.rds.amazonaws.com:3306/quiz?createDatabaseIfNotExist=true
+spring.datasource.username=admin
+spring.datasource.password=admin1234
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+#spring MVC Config
+spring.mvc.view.prefix=/jsp/
+spring.mvc.view.suffix=.jsp
